// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Toast container should pass position when it's defined in props 1`] = `
<div
  className="toast top default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should add button 1`] = `
<div
  className="toast bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
  <div
    className="button"
  >
    {"name":"button","props":{"name":"TOAST_default","primary":true,"flat":true,"title":"my button"}}
  </div>
</div>
`;

exports[`common/Toast graphical (JSX) should add button and onClick 1`] = `
<div
  className="toast bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
  <div
    className="button"
  >
    {"name":"button","props":{"name":"TOAST_default","primary":true,"flat":true,"title":"my button"}}
  </div>
</div>
`;

exports[`common/Toast graphical (JSX) should add button and onClick and extends name 1`] = `
<div
  className="toast bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
  <div
    className="button"
  >
    {"name":"button","props":{"name":"TOAST_NAME","primary":true,"flat":true,"title":"my button"}}
  </div>
</div>
`;

exports[`common/Toast graphical (JSX) should add custom className 1`] = `
<div
  className="toast custom bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should add custom delay 1`] = `
<div
  className="toast bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should add custom position 1`] = `
<div
  className="toast top default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should add custom style 1`] = `
<div
  className="toast bottom default"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should add custom type 1`] = `
<div
  className="toast bottom warning"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should add title 1`] = `
<div
  className="toast bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    my awesome title
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should have a default behaviour 1`] = `
<div
  className="toast bottom default"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;

exports[`common/Toast graphical (JSX) should print toast 1`] = `
<div
  className="toast bottom default print"
  style={Object {}}
>
  <span
    className="text"
  >
    
  </span>
</div>
`;
